--- a/os2/howtos/services.html
+++ b/os2/howtos/services.html
@@ -2,8 +2,8 @@
    <head>
        <link rel="stylesheet" type="text/css" media="screen" href="/style/default.css">
        <title>os2 %ETC%\services with ttf fonts</title></head>
-   <body>
-   <pre>
+   <body id="www-gimp-org">
+   <pre class="text">
 #                          #Brian Hammill 
 dpserve         7020/tcp   #DP Serve
 dpserve         7020/udp   #DP Serve
