--- a/os2/howtos/XF86Config3_Files_type1.html
+++ b/os2/howtos/XF86Config3_Files_type1.html
@@ -1,8 +1,8 @@
    <head>
        <link rel="stylesheet" type="text/css" media="screen" href="/style/default.css">
        <title>os2 XF86Config Files Section with type1 fonts</title></head>
-   <body>
-   <pre>
+   <body id="www-gimp-org">
+   <pre class="text">
 Section "Files"
 
 # The location of the RGB database.  Note, this is the name of the
