doh! stupid mistake in config file

--- a/os2/howtos/XF86Config3_Files_truetype.html
+++ b/os2/howtos/XF86Config3_Files_truetype.html
@@ -25,7 +25,7 @@ FontPath   &quot;/XFree86/lib/X11/fonts/Speedo/&quot;
 FontPath   &quot;/XFree86/lib/X11/fonts/75dpi/&quot;
 FontPath   &quot;/XFree86/lib/X11/fonts/100dpi/&quot;
 <span class="different">
-FontPath   &quot;c:/PSFONTS/&quot;
+FontPath   &quot;inet/127.0.0.1:7100&quot;
 </span>
 
 # For OSs that support Dynamically loaded modules, ModulePath can be
