Fixed Perlotine tutorial according to scizzo's request to make images
* Fixed Perlotine tutorial according to scizzo's request to make
images centered.

--- a/tutorials/Perlotine/index.html
+++ b/tutorials/Perlotine/index.html
@@ -5,8 +5,8 @@
 <h1>Perlotine Tutorial</h1>
 
 <h2>Intention</h2>
-<p>
-  <img src="perlotine1-guides.png" alt=""/>
+<p style="text-align: center;">
+  <img src="perlotine1-guides.png" alt="" />
 </p>
 <p>
   I made a pretty neat image map for my web site. These three tutorials demonstrate some of The GIMPs html 
@@ -24,8 +24,8 @@
 </p>
 
 <h2>Step 1</h2>
-<p>
-  <img src="perlotine1-zoom.png" alt=""/>
+<p style="text-align: center;">
+  <img src="perlotine1-zoom.png" alt="" />
 </p>
 <p>
   Perl-O-Tine is a plug-in that slices an image along guides that you have placed and writes the html table that will put 
@@ -37,8 +37,8 @@
 </p>
 
 <h2>Step 2</h2>
-<p>
-  <img src="dialog-perlotine.png" alt=""/>
+<p style="text-align: center;">
+  <img src="dialog-perlotine.png" alt="" />
 </p>
 <p>
   Once you have the guides in place, you can find the plug-in under <span class="filter">&lt;Image&gt;Filter-&gt;Web-&gt;Perlotine</span>.
@@ -52,19 +52,13 @@
 </p>
 
 <h2>Step 3</h2>
-<table cellspacing=0 cellpadding=0>
-<tr>
- <td class="map"><img class="map" alt="" src="imap-table1-0-0.png" width="290" height="73"></td>
- </tr><tr>
- <td class="map"><img class="map" alt="" src="imap-table1-1-0.png" width="290" height="177"></td>
- </tr><tr>
- <td class="map"><img class="map" alt="" src="imap-table1-2-0.png" width="290" height="17"></td>
- </tr><tr>
- <td class="map"><img class="map" alt="" src="imap-table1-3-0.png" width="290" height="21"></td>
- </tr><tr>
- <td class="map"><img class="map" alt="" src="imap-table1-4-0.png" width="290" height="50"></td>
- </tr>
-</table>
+  <table style="border-spacing: 0; margin-left: auto; margin-right: auto;"><tbody>
+    <tr><td><img class="map" alt="" src="imap-table1-0-0.png" width="290" height="73" /></td></tr>
+    <tr><td><img class="map" alt="" src="imap-table1-1-0.png" width="290" height="177" /></td></tr>
+    <tr><td><img class="map" alt="" src="imap-table1-2-0.png" width="290" height="17" /></td></tr>
+    <tr><td><img class="map" alt="" src="imap-table1-3-0.png" width="290" height="21" /></td></tr>
+    <tr><td><img class="map" alt="" src="imap-table1-4-0.png" width="290" height="50" /></td></tr>
+  </tbody></table>
 <p>
   This is the product of the first slicing with Perlotine.
 </p>
@@ -91,14 +85,12 @@
     &lt;/tr&gt;
 &lt;/table&gt;
 </pre>
-
-<table cellspacing=0 cellpadding=0 border=0>
-<tr>
-  <td class="map"><img class="map" alt="" src="imap-table1-3-0-0.png" width="10" height="21"></td>
-  <td class="map"><img class="map" alt="" src="imap-table1-3-0-1.png" width="219" height="21"></td>
-  <td class="map"><img class="map" alt="" src="imap-table1-3-0-2.png" width="61" height="21"></td>
-</tr>
-</table>
+  <table style="border-spacing: 0; margin: 0 auto 0 auto;"><tbody>
+    <tr><td class="map"><img class="map" alt="" src="imap-table1-3-0-0.png" width="10" height="21" /></td>
+      <td class="map"><img class="map" alt="" src="imap-table1-3-0-1.png" width="219" height="21" /></td>
+      <td class="map"><img class="map" alt="" src="imap-table1-3-0-2.png" width="61" height="21" /></td>
+    </tr>
+  </tbody></table>
 <p>
   This is the second slice. The dialog box has been put into its own element. By slicing it separately, I avoided slicing the image map.
 </p>
@@ -111,24 +103,16 @@
     &lt;/tr&gt;
 &lt;/table&gt;
 </pre>
-<table cellspacing=0 cellpadding=0 border=0>
- <tr>
-   <td colspan="3"><img class="map" alt=" " src="imap-table1-0-0.png" width="290" height="73"></td>
- </tr>
- <tr>
-   <td colspan="3"><img class="map" alt=" " src="imap-table1-1-0.png" width="290" height="177"></td>
- </tr>
- <tr>
-   <td colspan="3"><img class="map" alt=" " src="imap-table1-2-0.png" width="290" height="17"></td>
- </tr>
- <tr>
-   <td class="map"><img class="map" alt=" " src="imap-table1-3-0-0.png" width="10" height="21"></td>
-   <td class="map"><img class="map" alt=" " src="imap-table1-3-0-1.png" width="219" height="21"></td>
-   <td class="map"><img class="map" alt=" " src="imap-table1-3-0-2.png" width="61" height="21"></td>
- </tr><tr>
-     <td colspan="3"><img alt=" " src="imap-table1-4-0.png" width="290" height="50"></td>
- </tr>
-</table>
+  <table style="border-spacing: 0; margin: 0 auto 0 auto;">
+    <tr><td colspan="3"><img class="map" alt=" " src="imap-table1-0-0.png" width="290" height="73" /></td></tr>
+    <tr><td colspan="3"><img class="map" alt=" " src="imap-table1-1-0.png" width="290" height="177" /></td></tr>
+    <tr><td colspan="3"><img class="map" alt=" " src="imap-table1-2-0.png" width="290" height="17" /></td></tr>
+    <tr><td class="map"><img class="map" alt=" " src="imap-table1-3-0-0.png" width="10" height="21" /></td>
+      <td class="map"><img class="map" alt=" " src="imap-table1-3-0-1.png" width="219" height="21" /></td>
+      <td class="map"><img class="map" alt=" " src="imap-table1-3-0-2.png" width="61" height="21" /></td>
+    </tr>
+    <tr><td colspan="3"><img alt=" " src="imap-table1-4-0.png" width="290" height="50" /></td></tr>
+  </table>
 <p>
   Here is the new table. It has 7 elements. The piece 4 rows down and 2 elements to the left can be filled with a textbox now.
 </p>
@@ -161,90 +145,83 @@
     &lt;/tr&gt;
 &lt;/table&gt;
 </pre>
-<table cellspacing=0 cellpadding=0 border=0>
- <tr>
-   <td colspan="3"><img class="map" alt=" " src="imap-table1-0-0.png" width="290" height="73"></td>
- </tr>
- <tr>
-   <td colspan="3"><table cellspacing=0 cellpadding=0 border=0>
- <tr>
-   <td class="map"><img class="map" alt=" " src="imap-table1-1-0-0.png" width="15" height="177"></td>
-   <td class="map"><img class="map" alt=" " src="imap-table1-1-0-1.png" width="241" height="177"></td>
-   <td class="map"><img class="map" alt=" " src="imap-table1-1-0-2.png" width="34" height="177"></td>
- </tr>
-</table>
-</td>
- </tr>
- <tr>
-   <td colspan="3"><img class="map" alt=" " src="imap-table1-2-0.png" width="290" height="17"></td>
- </tr>
- <tr>
-   <td class="map"><img class="map" alt=" " src="imap-table1-3-0-0.png" width="10" height="21"></td>
-   <td class="map"><img class="map" alt=" " src="imap-table1-3-0-1.png" width="219" height="21"></td>
-   <td class="map"><img class="map" alt=" " src="imap-table1-3-0-2.png" width="61" height="21"></td>
- </tr><tr>
-   <td colspan="3"><table cellspacing=0 cellpadding=0 border=0>
- <tr>
-   <td class="map"><img class="map" alt=" " src="imap-table1-4-0-0.png" width="5" height="6"></td>
-   <td class="map"><img class="map" alt=" " src="imap-table1-4-0-1.png" width="277" height="6"></td>
-   <td class="map"><img class="map" alt=" " src="imap-table1-4-0-2.png" width="8" height="6"></td>
- </tr>
- <tr>
-   <td class="map"><img class="map" alt=" " src="imap-table1-4-1-0.png" width="5" height="36"></td>
-   <td class="map"><img class="map" alt=" " src="imap-table1-4-1-1.png" width="277" height="36"></td>
-   <td class="map"><img class="map" alt=" " src="imap-table1-4-1-2.png" width="8" height="36"></td>
- </tr>
- <tr>
-   <td class="map"><img class="map" alt=" " src="imap-table1-4-2-0.png" width="5" height="8"></td>
-   <td class="map"><img class="map" alt=" " src="imap-table1-4-2-1.png" width="277" height="8"></td>
-   <td class="map"><img class="map" alt=" " src="imap-table1-4-2-2.png" width="8" height="8"></td>
- </tr>
-</table>
-</td></tr></table>
-
-<table cellspacing=0 cellpadding=0 border=0>
-  <tr>
-    <td colspan="3"><img class="map" alt=" " src="imap-table1-0-0.png" width="290" height="73"></td>
-  </tr>
-  <tr>
-    <td colspan="3"><table cellspacing=0 cellpadding=0 border=0>
-  <tr>
-    <td class="map"><img class="map" alt=" " src="imap-table1-1-0-0.png" width="15" height="177"></td>
-    <td class="map"><img class="map" alt=" " src="imap-table1-1-0-1.png" width="241" height="177"></td>
-    <td class="map"><img class="map" alt=" " src="imap-table1-1-0-2.png" width="34" height="177"></td>
-  </tr>
-</table>
-</td>
-  </tr>
-  <tr>
-    <td colspan="3"><img class="map" alt=" " src="imap-table1-2-0.png" width="290" height="17"></td>
-  </tr>
-  <tr>
-    <td class="map"><img class="map" alt=" " src="imap-table1-3-0-0.png" width="10" height="21"></td>
-    <td class="map"><img class="map" alt=" " src="imap-table1-3-0-1.png" width="219" height="21"></td>
-    <td class="map"><img class="map" alt=" " src="imap-table1-3-0-2.png" width="61" height="21"></td>
-  </tr><tr>
-    <td colspan="3"><table cellspacing=0 cellpadding=0 border=0>
-  <tr>
-    <td class="map"><img class="map" alt=" " src="imap-table1-4-0-0.png" width="5" height="6"></td>
-    <td class="map"><img class="map" alt=" " src="imap-table1-4-0-1.png" width="277" height="6"></td>
-    <td class="map"><img class="map" alt=" " src="imap-table1-4-0-2.png" width="8" height="6"></td>
-  </tr>
-  <tr>
-    <td class="map"><img class="map" alt=" " src="imap-table1-4-1-0.png" width="5" height="36"></td>
-    <td class="map"><img class="map" alt=" " src="imap-table1-4-1-1.png" width="277" height="36"></td>
-    <td class="map"><img class="map" alt=" " src="imap-table1-4-1-2.png" width="8" height="36"></td>
-  </tr>
-  <tr>
-    <td class="map"><img class="map" alt=" " src="imap-table1-4-2-0.png" width="5" height="8"></td>
-    <td class="map"><img class="map" alt=" " src="imap-table1-4-2-1.png" width="277" height="8"></td>
-    <td class="map"><img class="map" alt=" " src="imap-table1-4-2-2.png" width="8" height="8"></td>
-  </tr>
-</table>
-</td></tr></table>
-
+<table style="width: 100%; vertical-align: top; margin: 0; padding: 0;"><tbody>
+    <tr><td><table style="border-spacing: 0; margin: 0 auto 0 auto;"><tbody>
+            <tr><td colspan="3" style=""><img alt=" " src="imap-table1-0-0.png" width="290" height="73" /></td></tr>
+            <tr><td colspan="3" style="padding: 1em;"><table style="border-spacing: 0;"><tbody>
+                    <tr><td><img class="map" alt=" " src="imap-table1-1-0-0.png" width="15" height="177" /></td>
+                      <td><img class="map" alt=" " src="imap-table1-1-0-1.png" width="241" height="177" /></td>
+                      <td><img class="map" alt=" " src="imap-table1-1-0-2.png" width="34" height="177" /></td>
+                    </tr>
+                  </tbody></table>
+              </td>
+            </tr>
+            <tr><td colspan="3"><img class="map" alt=" " src="imap-table1-2-0.png" width="290" height="17" /></td></tr>
+            <tr>
+              <td><img class="map" alt=" " src="imap-table1-3-0-0.png" width="10" height="21" /></td>
+              <td><img class="map" alt=" " src="imap-table1-3-0-1.png" width="219" height="21" /></td>
+              <td><img class="map" alt=" " src="imap-table1-3-0-2.png" width="61" height="21" /></td>
+            </tr>
+            <tr>
+              <td colspan="3" style="padding-left: 2em;"><table style="border-spacing: 0;"><tbody>
+                    <tr>
+                      <td><img class="map" alt=" " src="imap-table1-4-0-0.png" width="5" height="6" /></td>
+                      <td><img class="map" alt=" " src="imap-table1-4-0-1.png" width="277" height="6" /></td>
+                      <td><img class="map" alt=" " src="imap-table1-4-0-2.png" width="8" height="6" /></td>
+                    </tr>
+                    <tr>
+                      <td><img class="map" alt=" " src="imap-table1-4-1-0.png" width="5" height="36" /></td>
+                      <td><img class="map" alt=" " src="imap-table1-4-1-1.png" width="277" height="36" /></td>
+                      <td><img class="map" alt=" " src="imap-table1-4-1-2.png" width="8" height="36" /></td>
+                    </tr>
+                    <tr>
+                      <td><img class="map" alt=" " src="imap-table1-4-2-0.png" width="5" height="8" /></td>
+                      <td><img class="map" alt=" " src="imap-table1-4-2-1.png" width="277" height="8" /></td>
+                      <td><img class="map" alt=" " src="imap-table1-4-2-2.png" width="8" height="8" /></td>
+                    </tr>
+                  </tbody></table>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </td><td style="vertical-align: top;">
+        <table style="border-spacing: 0; border-collapse: collapse;"><tbody>
+            <tr><td colspan="3" style="margin: 0; padding: 0; height: 73px;"><img style="margin: 0; padding: 0;" alt=" " src="imap-table1-0-0.png" width="290" height="73" /></td></tr>
+            <tr><td colspan="3" style="margin: 0; padding: 0;"><table style="border-spacing: 0; margin: 0; padding: 0;"><tbody>
+                    <tr><td style="margin: 0; padding: 0; height: 177px;"><img alt=" " src="imap-table1-1-0-0.png" width="15" height="177" /></td><td style="margin: 0; padding: 0;"><img alt=" " src="imap-table1-1-0-1.png" width="241" height="177" /></td><td style="margin: 0; padding: 0;"><img alt=" " src="imap-table1-1-0-2.png" width="34" height="177" /></td></tr></tbody></table></td></tr>
+            <tr>
+              <td colspan="3" style="margin: 0; padding: 0;"><img alt=" " src="imap-table1-2-0.png" width="290" height="17" /></td>
+            </tr>
+            <tr>
+              <td style="padding: 0;"><img alt=" " src="imap-table1-3-0-0.png" width="10" height="21" /></td>
+              <td style="padding: 0;"><img alt=" " src="imap-table1-3-0-1.png" width="219" height="21" /></td>
+              <td style="padding: 0;"><img alt=" " src="imap-table1-3-0-2.png" width="61" height="21" /></td>
+            </tr>
+            <tr>
+              <td colspan="3" style="margin: 0; padding: 0;"><table style="border-spacing: 0;"><tbody>
+                    <tr>
+                      <td style="padding: 0;"><img alt=" " src="imap-table1-4-0-0.png" width="5" height="6" /></td>
+                      <td style="padding: 0;"><img alt=" " src="imap-table1-4-0-1.png" width="277" height="6" /></td>
+                      <td style="padding: 0;"><img alt=" " src="imap-table1-4-0-2.png" width="8" height="6" /></td>
+                    </tr>
+                    <tr>
+                      <td style="padding: 0;"><img alt=" " src="imap-table1-4-1-0.png" width="5" height="36" /></td>
+                      <td style="padding: 0;"><img alt=" " src="imap-table1-4-1-1.png" width="277" height="36" /></td>
+                      <td style="padding: 0;"><img alt=" " src="imap-table1-4-1-2.png" width="8" height="36" /></td>
+                    </tr>
+                    <tr>
+                      <td style="padding: 0;"><img alt=" " src="imap-table1-4-2-0.png" width="5" height="8" /></td>
+                      <td style="padding: 0;"><img alt=" " src="imap-table1-4-2-1.png" width="277" height="8" /></td>
+                      <td style="padding: 0;"><img alt=" " src="imap-table1-4-2-2.png" width="8" height="8" /></td>
+                    </tr>
+                  </tbody></table>
+              </td>
+            </tr>
+          </tbody></table>
+      </td>
+    </tr></tbody></table>
 <pre class="code">
-<p>&lt;!--  Ugly ugly HTML (that works in mozilla)  --&gt;</p>
+&lt;!--  Ugly ugly HTML (that works in mozilla)  --&gt;
 &lt;table cellspacing=0 cellpadding=0 border=0&gt;
     &lt;tr&gt;
         &lt;td colspan=&quot;3&quot;&gt;&lt;img alt=&quot; &quot; src=&quot;imap-table1-0-0.png&quot; width=&quot;290&quot; height=&quot;73&quot;&gt;&lt;/td&gt;
