Fixed tutorial/Reducing_CCD_Noise Fixed tutorial/ContrastMask Fixed
* Fixed tutorial/Reducing_CCD_Noise
* Fixed tutorial/ContrastMask
* Fixed tutorial/Sepia_Toning
* Fixed tutorial/Blur_Overlays
* Fixed tutorial/Smart_Sharpening
* Fixed tutorial/Blown_Out_Highlights
so that all of the page footer is at the bottom of the
page.  Fixed syntax of end-tag-less elements to have a
space before the '/>'.  Use <p> instead of <br /> to make
paragraphs.

--- a/tutorials/Blown_Out_Highlights/index.html
+++ b/tutorials/Blown_Out_Highlights/index.html
@@ -9,8 +9,8 @@
 
 <h2>Intention</h2>
 <p class="images">
-  <img src="before.jpg" alt=""/>
-  <img src="after.jpg" alt=""/>
+  <img src="before.jpg" alt="" />
+  <img src="after.jpg" alt="" />
 </p>
 <p>
   In this tutorial I'll show you how to salvage an image that has blown out highlights. 
@@ -18,7 +18,8 @@
   which has an effective contrast range of about 5 stops. If you are not careful 
   with your exposure you can easily lose all detail in your highlight areas, 
   with no way to get it back: they "blow out" to clear (white).
-  <br /><br />
+</p>
+<p>
   Many digital cameras have similar issues, especially consumer level ones. 
   With these kinds of cameras it is worth paying attention to the old adage: "expose for the highlights". 
   I find that if I treat my digital camera as if I were shooting slide film the exposure rules are about the same.
@@ -32,60 +33,71 @@
 
 <h2>Step 1</h2>
 <p class="images">
-  <img src="original.jpg" alt=""/>
+  <img src="original.jpg" alt="" />
 </p>
 <p>
   Here is the original image.
-  <br />
+</p>
+<p>
   I saw my cat go up into a lemon tree. Thinking there might be an interesting shot there, 
   I grabbed the camera and shot him from several angles, 
   including this shot through a hole in the foliage. When I saw the image later on the 
   monitor I realized what a nice natural three-dimensional frame I had.
-  <br /><br />
+</p>
+<p>
   The camera was set on automatic exposure. While it did a great job of exposing for the dark cat in the shade of the tree, 
   there are several spots where specular reflections of the bright sunshine overhead blew out. 
   The worst and most noticable is the one off of the leaf at the top of the image. 
   There are some less objectionable, but bothersome burned out areas to the lower right of the cat's face.
-  <br /><br />
+</p>
+<p>
   Great image...could I rescue it?
 </p>
 
 <h2>Step 2</h2>
 <p class="images">
-  <img src="colorpicker1.jpg" alt=""/>
+  <img src="colorpicker1.jpg" alt="" />
 </p>
 <p>
-  Using the color picker tool, you can see that there is no usable information left in the highlight. Pure white, of course, is 255/255/255.
-  <br />
-  If there had been some detail left here I might have tried a variation on the contrast masking technique or the "digital" neutral density filter first.
+  Using the color picker tool, you can see that there is no usable
+  information left in the highlight. Pure white, of course, is
+  255/255/255.
+</p>
+<p>
+  If there had been some detail left here I might have tried a
+  variation on the contrast masking technique or the "digital" neutral
+  density filter first.
 </p>
 
 <h2>Step 3</h2>
 <p class="images">
-  <img src="threshold.jpg" alt=""/>
-  <img src="threshold-image.jpg" alt=""/>
+  <img src="threshold.jpg" alt="" />
+  <img src="threshold-image.jpg" alt="" />
 </p>
 <p>
   The first step is to create a channel mask to be able to mask out 
   parts of the image we don't want to affect. I'll use this for the main "pixel graft".
-  <br />
+</p>
+<p>
   Duplicate the original image (<span class="filter">&lt;Image&gt; Image -&gt; Duplicate</span> or <kbd>Ctrl+D</kbd>).
-  <br />
+</p>
+<p>
   In the duplicate, select <span class="filter">&lt;Image&gt; Image -&gt; Colors -&gt; Threshold</span>. 
   In the threshold dialog box, drag to select the very right 
   (extreme highlights) portion of the histogram. Alternatively, you can type in the lower bound, as I did here (250).
-  <br /><br />
+</p>
+<p>
   This causes all the pixels in the image from 250-255 to go white and all the others to go black.
 </p>
 
 <h2>Step 4</h2>
 <p class="images">
-  <img src="channels1.jpg" alt=""/>
-  <img src="newchanneloptions.jpg" alt=""/>
+  <img src="channels1.jpg" alt="" />
+  <img src="newchanneloptions.jpg" alt="" />
 </p>
 <p class="images">
-  <img src="channels2.jpg" alt=""/>
-  <img src="image-channel.jpg" alt=""/>
+  <img src="channels2.jpg" alt="" />
+  <img src="image-channel.jpg" alt="" />
 </p>
 <p>
   Go back to the original image, and bring up the Layers and Channels dialog 
@@ -95,99 +107,110 @@
 
 <h2>Step 5</h2>
 <p class="images">
-  <img src="image-channel-paste.jpg" alt=""/>
-  <img src="channels3.jpg" alt=""/>
+  <img src="image-channel-paste.jpg" alt="" />
+  <img src="channels3.jpg" alt="" />
 </p>
 <p class="images">
-  <img src="layers1.jpg" alt=""/>
-  <img src="layers2.jpg" alt=""/>
+  <img src="layers1.jpg" alt="" />
+  <img src="layers2.jpg" alt="" />
 </p>
 <p>
   Go back to the threshold image, <span class="filter">&lt;Image&gt; Select -&gt; All</span> 
   (<kbd>Ctrl+A</kbd>) and <span class="filter">&lt;Image&gt; Edit -&gt; Copy</span> (<kbd>Ctrl+C</kbd>).
-  <br />
+</p>
+<p>
   <span class="filter">&lt;Image&gt; Edit -&gt; Paste</span> it into the original image (it should go into the new channel).
-  <br />
+</p>
+<p>
   Click on the Layers tab and anchor the floating selection.
-  <br />
+</p>
+<p>
   You can close the threshold image now.
 </p>
 
 <h2>Step 6</h2>
 <p class="images">
-  <img src="featherselection.jpg" alt=""/>
-  <img src="image2.jpg" alt=""/>
+  <img src="featherselection.jpg" alt="" />
+  <img src="image2.jpg" alt="" />
 </p>
 <p>
   Click on the Channels tab again, and right click on the new channel and select Channel to Selection (<kbd>Ctrl+S</kbd>). 
   You may want to also click on the eye beside the channel to turn off visibility of the channel.
-  <br /><br />
+</p>
+<p>
   Now feather the selection (<span class="filter">&lt;Image&gt; Select -&gt; Feather</span>). 
   I used a value of 15 pixels or so in this case.
-  <br />
+</p>
+<p>
   Finally (important!), click back on the Layers tab and select the Background layer, 
   so the selection and further operations will apply to the image and not the channel mask.
 </p>
 
 <h2>Step 7</h2>
 <p class="images">
-  <img src="tooloptions-clone.jpg" alt=""/>
-  <img src="brushes1.jpg" alt=""/>
-  <img src="image3.jpg" alt=""/>
+  <img src="tooloptions-clone.jpg" alt="" />
+  <img src="brushes1.jpg" alt="" />
+  <img src="image3.jpg" alt="" />
 </p>
 <p>
   Now the real work begins.
-  <br />
+</p>
+<p>
   We've lost these pixels entirely, so we're going to have to graft some on from somewhere nearby using the clone tool. 
   A description of how to use this tool is beyond the scope of this document 
   (see the <a href="http://gimp-savvy.com/BOOK/index.html">GIMP savvy</a> to find out more about this tool).
-  <br /><br />
+</p>
+<p>
   I cloned from the light part of the leaf just beyond the dark band to the right of the blown out area. 
   This gave me a similar light-dark-light transition. 
   You can see the clone tool options and the brush 
   (<span class="filter">&lt;Image&gt; Dialogs -&gt; Brushes</span>) I selected (at right).
-  <br />
+</p>
+<p>
   Zoom in and clone until you have the area filled with a realistic facimile of the missing detail. 
   Most likely it will have a noticable transition around the edges. That's OK, we'll fix that up next.
-  <br />
+</p>
+<p>
   <span class="filter">&lt;Image&gt; Select -&gt; None</span> and zoom out to inspect your work.
 </p>
 
 <h2>Step 8</h2>
 <p class="images">
-  <img src="tooloptions-colorpicker.jpg" alt=""/>
-  <img src="colorpicker2.jpg" alt=""/>
-  <img src="tooloptions-airbrush.jpg" alt=""/>
+  <img src="tooloptions-colorpicker.jpg" alt="" />
+  <img src="colorpicker2.jpg" alt="" />
+  <img src="tooloptions-airbrush.jpg" alt="" />
 </p>
 <p class="images">
-  <img src="brushes2.jpg" alt=""/>
-  <img src="tooloptions-smudge.jpg" alt=""/>
-  <img src="tooloptions-convolve.jpg" alt=""/>
+  <img src="brushes2.jpg" alt="" />
+  <img src="tooloptions-smudge.jpg" alt="" />
+  <img src="tooloptions-convolve.jpg" alt="" />
 </p>
 <p class="images">
-  <img src="brushes3.jpg" alt=""/>
-  <img src="brushes4.jpg" alt=""/>
+  <img src="brushes3.jpg" alt="" />
+  <img src="brushes4.jpg" alt="" />
 </p>
 <p class="images">
-  <img src="image4.jpg" alt=""/>
-  <img src="image5.jpg" alt=""/>
+  <img src="image4.jpg" alt="" />
+  <img src="image5.jpg" alt="" />
 </p>
 <p>
   This step is where the most difficult work occurs. I must by necessity abbreviate this step, 
   since it involves iterations of applying the following tools:
 </p>
 <ul>
-  <li><img src="smudge.jpg" alt=""/> smudge</li>
-  <li><img src="clone.jpg" alt=""/> clone</li>
-  <li><img src="airbrush.jpg" alt=""/> <img src="colorpicker.jpg" alt=""/> airbrush (w/color picker)</li>
-  <li><img src="convolve.jpg" alt=""/> convolve (blur)</li>
+  <li><img src="smudge.jpg" alt="" /> smudge</li>
+  <li><img src="clone.jpg" alt="" /> clone</li>
+  <li><img src="airbrush.jpg" alt="" /> <img src="colorpicker.jpg" alt="" /> airbrush (w/color picker)</li>
+  <li><img src="convolve.jpg" alt="" /> convolve (blur)</li>
 </ul>
 <p>
   Basically, smudge is your friend after a serious cloning job like this to clean up the transitions. Smudge around all the edges of the clone. 
   The clone tool can also be used again here and there for "mop-up" work.
-  <br /><br />
+</p>
+<p>
   I use the airbrush and convolve/blur tools to do fine touch up on the smudge job and make it totally seamless with the rest of the leaf.
-  <br /><br />
+</p>
+<p>
   Tips:
 </p>
 <ul>
@@ -196,10 +219,14 @@
   (double-click on a tool to see the tool options). Some examples I used here are shown at right.</li>
   <li>Vary your brushes! You generally want a nice feathered edge for smoothing seams. Some examples I used here are shown at right.</li>
   <li>When using the airbrush, use the color picker first to sample a pixel. I average a pixel value as shown in the color picker options, right.</li>
-  <li>Periodically, zoom in and out to examine your work. The zoom keys are incredibly handy for this ("=" key to zoom in, "-" key to zoom out).
-  <br /><br />
-  When you really think you are done, examine the image at full-screen. Remember that when you print something at 16x20 or 20x30 you may expose flaws 
-  in your retouching that you didn't see at small sizes.</li>
+
+  <li>Periodically, zoom in and out to examine your work. The zoom
+  keys are incredibly handy for this ("=" key to zoom in, "-" key to
+  zoom out).  When you really think you are done, examine the image at
+  full-screen. Remember that when you print something at 16x20 or
+  20x30 you may expose flaws in your retouching that you didn't see at
+  small sizes.
+  </li>
 </ul>
 <p>
   Right Image: zoomed view after the clone (previous step) and after this step.
@@ -207,16 +234,16 @@
 
 <h2>Step 9</h2>
 <p class="images">
-  <img src="before-512x384.jpg" alt=""/>
-  <img src="after-512x384.jpg" alt=""/>
+  <img src="before-512x384.jpg" alt="" />
+  <img src="after-512x384.jpg" alt="" />
 </p>
 <p>
   I went on to address the specular highlights to the lower right of the cat's face: spots of sunlit grass that burned out. 
   These are not as bad, but I noticed them on a 16x20 print I had made and they bothered me, so toned them down a little.
-  <br /><br />
+  </p>
+<p>
   Here are the original (left image) and finished images (right image).
 </p>
-
 <p>
   The original tutorial (possibly with updated information) may be found <a href="http://redskiesatnight.com/">here</a>.
 </p>
