changed to reflect new options to ChangeLog.py font-size: medium instead
* programmatic/admin/develop/gimp-unstable.sh:
* programmatic/admin/develop/gegl-unstable.sh:
* programmatic/admin/develop/gimp-help.sh:
* programmatic/admin/develop/gimp-print.sh:
* programmatic/admin/develop/film-gimp.sh: changed to reflect new options to ChangeLog.py
* programmatic/admin/wgo-admin.cpp: font-size: medium instead of small
* programmatic/admin/news/news-edit.py (html_news_edit): use <h1> instead of old <div>
  visual cleanup, position tweaking, and "tooltips"
* programmatic/contest/contest.py (submit): use <h2> instead of old <div>
* programmatic/wgo.py (error): use <h2> instead of old <div>
* programmatic/contest/wgo-contest.cpp: passes validation

--- a/programmatic/admin/howto.html
+++ b/programmatic/admin/howto.html
@@ -1,22 +1,19 @@
 <!--#include virtual="/includes/wgo-xhtml-init.xhtml" -->
 <title>GIMP - The GNU Image Manipulation Program</title>
-<link rel="stylesheet" title="Administration HOWTO" href="/admin/wgo-admin.css" type="text/css" media="screen">
+<link rel="stylesheet" title="Administration HOWTO" href="/admin/wgo-admin.css" type="text/css" media="screen" />
   <!--#include virtual="/includes/wgo-look-feel.xhtml" -->
   <!--#include virtual="/includes/wgo-page-init.xhtml" -->
 
-  <div class="heading">gimp.org Administration HOWTO</div>
-  <!-- h1 class="heading">gimp.org Administration HOWTO</h1 -->
+  <h1 class="heading">gimp.org Administration HOWTO</h1>
+  <h2 class="subtitle">http.conf</h2>
   <p>
-    <div class="subtitle">http.conf</div>
-    <p>
-      Below, is the relevant portion of my http.conf file.  You will
-      need to adjust pathnames, email addresses, and
-      <tt>ServerName</tt> to fit your installation.
-    </p>
-    <p>
-      <fieldset>
-        <legend><b>http.conf excerpt</b></legend>
-        <pre>
+    Below, is the relevant portion of my http.conf file.  You will
+    need to adjust pathnames, email addresses, and
+    <tt>ServerName</tt> to fit your installation.
+  </p>
+  <fieldset>
+    <legend><b>http.conf excerpt</b></legend>
+    <pre>
 NameVirtualHost 63.199.184.245:8082
 
 &lt;VirtualHost 63.199.184.245:8082&gt;
@@ -32,6 +29,5 @@ NameVirtualHost 63.199.184.245:8082
 &lt;/VirtualHost&gt;
 </pre>
 </fieldset>
-</p>
 <!--#include virtual="/includes/wgo-page-fini.xhtml" -->
 <!--#include virtual="/includes/wgo-xhtml-fini.xhtml" -->
