Various changes related to me, my name and my web page.

--- a/links/org.html
+++ b/links/org.html
@@ -39,8 +39,8 @@
 </p>
 <p>
   <a href="http://brix.gimp.org">brix.gimp.org</a><br />
-  <a href="http://cinamon.gimp.org">cinamon.gimp.org</a><br />
-  A study in Server Side Includes.
+  <a href="http://cinnamon.gimp.org">cinnamon.gimp.org</a><br />
+  A study in local traditions.
 </p>
 <p>
   <a href="http://carol.gimp.org">carol.gimp.org</a><br />
